--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
     <link rel="manifest" href="/images/site.webmanifest">
+    <!-- favicon ending -->
     <!-- Bootstrap CSS via CDN  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<!-- Bootstrap CSS via CDN ending -->
+    <!-- Bootstrap font icons -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> -->
+    <!-- Bootstrap font icons ending-->
     <!-- Custom CSS Styles -->
     <link rel="stylesheet" href="/css/styles.css">
+    <!-- Custom CSS Styles ending-->
 </head>
 
 <body>
@@ -34,42 +40,112 @@
      ****************
     -->
 
-    <header>
-        <!-- Navbar -->
 
-        <nav class="container">
-            <div class="d-flex flex-wrap justify-content-center py-3">
-                <a href="/"
-                    class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                    <svg class="bi me-2" width="40" height="32">
-                        <use xlink:href="#bootstrap"></use>
-                    </svg>
-                    <span class="fs-4">MJ</span>
-                </a>
+    <!-- Navbar -->
 
-                <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Travel</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Feedback</a></li>
-                </ul>
-            </div>
-        </nav>
-        <!-- Navbar -->
-        <!-- Background image -->
-  <div id="hero" class="p-5 text-center bg-image">
-<div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
-  <div class="d-flex justify-content-center align-items-center h-100">
-    <div class="text-white">
-      <h1 class="mb-3">Welcome to my Blog</h1>
-      <h4 class="mb-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error cumque reprehenderit harum.</h4>
-      <a data-mdb-ripple-init class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a>
-    </div>
-  </div>
-</div>
-</div>
-<!-- Background image -->
+
+    <header class="d-flex flex-wrap justify-content-around p-4 bg-secondary bg-opacity-75">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <svg class="bi me-2" width="40" height="32">
+                <use xlink:href="#bootstrap"></use>
+            </svg>
+            <span class="fs-4">My Journey</span>
+        </a>
+
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Travel</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Feedback</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Upcoming</a></li>
+        </ul>
+
     </header>
+    <!-- Navbar -->
+    <!-- Background image -->
+    <div id="" class="hero d-flex align-items-center justify-content-center">
+        <div class="bg-secondary p-4 bg-opacity-75 rounded">
+            <div class="d-flex justify-content-center align-items-center h-100">
+                <div class="text-dark py-4">
+                    <h1 class="mb-3">Welcome to my Travel Blog</h1>
+                    <h5 class="mb-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error cumque
+                        reprehenderit harum.</h5>
+                    <a data-mdb-ripple-init class="btn btn-outline-light btn-lg" href="#!" role="button">Explore</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Background image -->
+
+
+
+    <!-- Sub 4 Images -->
+    <section class="container my-5">
+        
+            <h3 class="display-3 text-center my-2">Places I have been to</h3>
+       <div class="d-flex flex-wrap justify-content-between my-4">
+        
+        <div class="card">
+            <img src="/images/berlin.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Berlin, Germany</h5>
+              <h6 class="card-subtitle mb-2 text-muted">March, 2022</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Know more</a>
+            </div>
+          </div>
+          <div class="card" ">
+            <img src="images/prague.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Prague, Czech Republic </h5>
+              <h6 class="card-subtitle mb-2 text-muted">September, 2018</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Know more</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/plovdiv.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Plovdiv, Bulgaria</h5>
+              <h6 class="card-subtitle mb-2 text-muted">June, 2024</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Know more</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/lahore.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Lahore, Pakistan</h5>
+              <h6 class="card-subtitle mb-2 text-muted">August, 2023</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Know more</a>
+            </div>
+          </div>
+        </div>
+    </section>
+
+
+    <footer class="d-flex flex-wrap justify-content-between align-items-center p-4 mt-4  bg-secondary text-white bg-opacity-75">
+        <!-- <div class="col-md-4 d-flex align-items-center">
+          <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+          </a>
+          <span class="mb-3 mb-md-0 text-body-secondary">© 2024 Company, Inc</span>
+        </div> -->
+        <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 Made with Love, in Hamburg</span>
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+          <li class="ms-3"><a class="text-body-secondary" href="#">
+            <?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M52.837,15.065c-1.811,0.805-3.76,1.348-5.805,1.591c2.088-1.25,3.689-3.23,4.444-5.592c-1.953,1.159-4.115,2-6.418,2.454  c-1.843-1.964-4.47-3.192-7.377-3.192c-5.581,0-10.106,4.525-10.106,10.107c0,0.791,0.089,1.562,0.262,2.303  c-8.4-0.422-15.848-4.445-20.833-10.56c-0.87,1.492-1.368,3.228-1.368,5.082c0,3.506,1.784,6.6,4.496,8.412  c-1.656-0.053-3.215-0.508-4.578-1.265c-0.001,0.042-0.001,0.085-0.001,0.128c0,4.896,3.484,8.98,8.108,9.91  c-0.848,0.23-1.741,0.354-2.663,0.354c-0.652,0-1.285-0.063-1.902-0.182c1.287,4.015,5.019,6.938,9.441,7.019  c-3.459,2.711-7.816,4.327-12.552,4.327c-0.815,0-1.62-0.048-2.411-0.142c4.474,2.869,9.786,4.541,15.493,4.541  c18.591,0,28.756-15.4,28.756-28.756c0-0.438-0.009-0.875-0.028-1.309C49.769,18.873,51.483,17.092,52.837,15.065z"/></svg>
+        </a></li>
+          <li class="ms-3"><a class="text-body-secondary" href="#">
+            <?xml version="1.0" ?><svg data-name="Layer 1" id="Layer_1" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg"><defs><style>.cls-1{fill:#062b31;}</style></defs><title/><path class="cls-1" d="M83,23a22,22,0,0,1,22,22V83a22,22,0,0,1-22,22H45A22,22,0,0,1,23,83V45A22,22,0,0,1,45,23H83m0-8H45A30.09,30.09,0,0,0,15,45V83a30.09,30.09,0,0,0,30,30H83a30.09,30.09,0,0,0,30-30V45A30.09,30.09,0,0,0,83,15Z"/><path class="cls-1" d="M90.14,32a5.73,5.73,0,1,0,5.73,5.73A5.73,5.73,0,0,0,90.14,32Z"/><path class="cls-1" d="M64.27,46.47A17.68,17.68,0,1,1,46.6,64.14,17.7,17.7,0,0,1,64.27,46.47m0-8A25.68,25.68,0,1,0,90,64.14,25.68,25.68,0,0,0,64.27,38.47Z"/></svg>
+        </a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#">
+            <?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029  c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77  L40.43,21.739z"/></svg>
+        </a></li>
+        </ul>
+
+      </footer>
     <!-- Bootstrap JS via CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
