--- a/berlin.html
+++ b/berlin.html
@@ -52,42 +52,56 @@
             <span class="fs-4">My Journey</span>
         </a>
 
-        <ul class="nav nav-pills">
-            <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="places.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Places
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="berlin.html">Berlin</a></li>
-                <li><a class="dropdown-item" href="prague.html">Prague</a></li>
-                <li><a class="dropdown-item" href="plovdiv.html">Plovdiv</a></li>
-                <li><a class="dropdown-item" href="lahore.html">Lahore</a></li>
-              </ul>
-            </li>
-            <li class="nav-item"><a href="suggestion.html" class="nav-link">Suggestion</a></li>
-            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-
-        </ul>
+       <ul class="nav nav-pills">
+          <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
+          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="places.html" class="nav-link">Places</a></li>
+          <li class="nav-item"><a href="suggestion.html" class="nav-link">Suggestion</a></li>
+      </ul>
 
     </header>
     <!-- Navbar -->
-    <!-- Background image -->
-    <div id="" class="hero d-flex align-items-center justify-content-center height-adjustment">
-        <div class="bg-secondary p-4 bg-opacity-75 rounded">
-            <div class="d-flex justify-content-center align-items-center h-100">
-                <div class="text-dark py-4">
-                    <h1 class="mb-3">Welcome to my Travel Blog</h1>
-                    <h5 class="mb-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error cumque
-                        reprehenderit harum.</h5>
-                    <a data-mdb-ripple-init class="btn btn-outline-light btn-lg" href="#!" role="button">Explore</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Background image -->
 
+    <!-- Image Slider -->
+    <div id="carouselExampleCaptions" class="carousel slide"  data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/images/berlin.jpg" class="d-block w-100  height-adjustment" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Berlin</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/images/berlin2.jpg" class="d-block w-100  height-adjustment" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Berlin</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/images/berlin3.jpg" class="d-block w-100  height-adjustment" alt="...">
+          <div class="carousel-caption d-none d-md-block bg-secondary p-4 bg-opacity-75 rounded">
+            <h5>Berlin</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!--Image Slider Ending -->
 
 
     <!-- Sub 4 Images -->
@@ -102,7 +116,7 @@
               <h5 class="card-title">Berlin, Germany</h5>
               <h6 class="card-subtitle mb-2 text-muted">March, 2022</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="berlin.html" class="btn btn-primary stretched-link">Know more</a>
+              <a href="#" class="btn btn-primary">Know more</a>
             </div>
           </div>
           <div class="card" ">
@@ -111,7 +125,7 @@
               <h5 class="card-title">Prague, Czech Republic </h5>
               <h6 class="card-subtitle mb-2 text-muted">September, 2018</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary stretched-link">Know more</a>
+              <a href="#" class="btn btn-primary">Know more</a>
             </div>
           </div>
           <div class="card">
@@ -120,7 +134,7 @@
               <h5 class="card-title">Plovdiv, Bulgaria</h5>
               <h6 class="card-subtitle mb-2 text-muted">June, 2024</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary stretched-link">Know more</a>
+              <a href="#" class="btn btn-primary">Know more</a>
             </div>
           </div>
           <div class="card">
@@ -129,7 +143,7 @@
               <h5 class="card-title">Lahore, Pakistan</h5>
               <h6 class="card-subtitle mb-2 text-muted">August, 2023</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary stretched-link">Know more</a>
+              <a href="#" class="btn btn-primary">Know more</a>
             </div>
           </div>
         </div>
