Added openweather 5 day forecast ( but dt_txt conversion to luxon not working)

--- a/about.html
+++ b/about.html
@@ -54,8 +54,7 @@
       <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
       <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-          aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           Places
         </a>
         <ul class="dropdown-menu">
@@ -73,72 +72,70 @@
   </header>
   <!-- Navbar Ending -->
 
-  <!-- Background image -->
-  <div id="" class="hero d-flex align-items-center justify-content-center height-adjustment">
-    <div class="bg-secondary p-4 bg-opacity-75 rounded">
-      <div class="d-flex justify-content-center align-items-center h-100">
-        <div class="text-dark py-4">
-          <h1 class="mb-3">Welcome to my Travel Blog</h1>
-          <h5 class="mb-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error cumque
-            reprehenderit harum.</h5>
-          <a data-mdb-ripple-init class="btn btn-outline-light btn-lg" href="#!" role="button">Explore</a>
-        </div>
+  <!-- About section -->
+  <div class="container py-5">
+    <div class="row">
+      <div class="col-9">
+        <h3>My Story</h3>
+
+        <p>This is how it all started. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore doloribus,
+          dolorem velit optio maxime
+          reprehenderit praesentium unde dolores cupiditate consequatur quaerat similique sequi laboriosam quasi
+          pariatur, numquam facilis perspiciatis dolorum.</p>
+
+        <figure>
+          <blockquote class="blockquote">
+            <p>Man cannot discover new oceans unless he has the courage to lose sight of the shore.</p>
+          </blockquote>
+          <figcaption class="blockquote-footer">
+            <cite title="Source Title">Andre Gide</cite>
+          </figcaption>
+        </figure>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum similique hic quasi eum sit animi,
+          aliquam molestias aliquid commodi magni minus voluptate. Eveniet mollitia delectus alias vero temporibus
+          recusandae tempore!</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam veritatis perferendis, inventore voluptatum
+          repellendus tenetur quae deleniti molestiae aliquid voluptatem sit quia earum cumque quis et minima aut rem
+          corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, quos aliquam. Facere accusantium,
+          ut inventore iste dolores atque culpa saepe ducimus. Corporis ipsum quisquam ratione dolorem velit repudiandae
+          aut laboriosam.
+        <p>
+          <figure>
+            <blockquote class="blockquote">
+              <p>Not all those who wander are lost.</p>
+            </blockquote>
+            <figcaption class="blockquote-footer">
+              <cite title="Source Title">J.R.R. Tolkien</cite>
+            </figcaption>
+          </figure>
+        <p>Magnam veritatis perferendis, inventore voluptatum
+          repellendus tenetur quae deleniti molestiae aliquid voluptatem sit quia earum cumque quis et minima aut rem
+          corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, quos aliquam.
+          aut laboriosam.
+        <p>
+          <p>In the End I would say lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam veritatis perferendis, inventore voluptatum
+            repellendus tenetur quae deleniti molestiae aliquid voluptatem sit quia earum cumque quis et minima aut rem
+            corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, quos aliquam. Facere accusantium,
+            ut inventore iste dolores atque culpa saepe ducimus. Corporis ipsum quisquam ratione dolorem velit repudiandae
+            aut laboriosam.
+          <p>
       </div>
+      <div class="col-3">
+        <img src="/images/pexels-suedadilli-29498888.jpg" class="img-fluid" alt="...">
+        <h3 class="mt-4 py-1">Inspiration</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam veritatis perferendis, inventore voluptatum
+          repellendus tenetur quae deleniti molestiae aliquid voluptatem sit quia earum cumque quis et minima aut rem
+          corporis
+        <p>
+
+
+
+      </div>
+
     </div>
   </div>
-  <!-- Background image -->
-
-
-
-  <!-- Sub 4 Images -->
-  <section class="container my-5">
-
-    <h3 class="display-3 text-center my-2 pb-4">Places I have been to</h3>
-    <div class="d-flex flex-wrap justify-content-between my-4">
-
-      <div class="card">
-        <img src="/images/berlin.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Berlin, Germany</h5>
-          <h6 class="card-subtitle mb-2 text-muted">March, 2022</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="berlin.html" class="btn btn-primary stretched-link">Know more</a>
-        </div>
-      </div>
-      <div class="card" ">
-            <img src=" images/prague.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Prague, Czech Republic </h5>
-          <h6 class="card-subtitle mb-2 text-muted">September, 2018</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary stretched-link">Know more</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="images/plovdiv.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Plovdiv, Bulgaria</h5>
-          <h6 class="card-subtitle mb-2 text-muted">June, 2024</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary stretched-link">Know more</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="images/lahore.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Lahore, Pakistan</h5>
-          <h6 class="card-subtitle mb-2 text-muted">August, 2023</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary stretched-link">Know more</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
+  <!-- About section Ending -->
 
   <footer
     class="d-flex flex-wrap justify-content-between align-items-center p-4 mt-4  bg-secondary text-white bg-opacity-75">
