fixed js navigations

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <h6 class="card-subtitle mb-2 text-muted">March, 2022</h6>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
-          <a href="berlin.html" class="btn btn-primary stretched-link">Know more</a>
+          <a href="berlin.html" class="btn btn-primary stretched-link">Explore</a>
         </div>
       </div>
       <div class="card" ">
@@ -113,7 +113,7 @@
           <h6 class="card-subtitle mb-2 text-muted">September, 2018</h6>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
-          <a href="#" class="btn btn-primary stretched-link">Know more</a>
+          <a href="prague.html" class="btn btn-primary stretched-link">Explore</a>
         </div>
       </div>
       <div class="card">
@@ -123,7 +123,7 @@
           <h6 class="card-subtitle mb-2 text-muted">June, 2024</h6>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
-          <a href="#" class="btn btn-primary stretched-link">Know more</a>
+          <a href="plovdiv.html" class="btn btn-primary stretched-link">Explore</a>
         </div>
       </div>
       <div class="card">
@@ -133,7 +133,7 @@
           <h6 class="card-subtitle mb-2 text-muted">August, 2023</h6>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
-          <a href="#" class="btn btn-primary stretched-link">Know more</a>
+          <a href="lahore.html" class="btn btn-primary stretched-link">Explore</a>
         </div>
       </div>
     </div>
