--- a/berlin.html
+++ b/berlin.html
@@ -33,12 +33,6 @@
 
 <body>
 
-  <!-- 
-     **Self Notes: **
-     Hero Image: https://mdbootstrap.com/docs/standard/extended/hero/  
-     Navigation menu: https://getbootstrap.com/docs/5.0/examples/headers/ 
-     ****************
-    -->
 
 
   <!-- Navbar -->
@@ -63,7 +57,7 @@
         </ul>
       </li>
       <li class="nav-item"><a href="suggestion.html" class="nav-link">Suggestion</a></li>
-      <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+       
 
     </ul>
 
@@ -138,6 +132,9 @@
           ut inventore iste dolores atque culpa saepe ducimus. Corporis ipsum quisquam ratione dolorem velit repudiandae
           aut laboriosam.
         <p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum similique hic quasi eum sit animi,
+            aliquam molestias aliquid commodi magni minus voluptate. Eveniet mollitia delectus alias vero temporibus
+            recusandae tempore!</p>
 
 
       </div>
@@ -155,7 +152,10 @@
               Hightest Temp: <span id="hightestTemperature"></span> &#x2103; <br>
               Lowest Temp: <span id="lowestTemperature"></span> &#x2103; </p>
             <h5 class="card-title text-capitalize" id="description"></h5>
-            <p><span id=""></span></p>
+            <hr>
+            <ul id="weatherList" class="list-group list-group-flush">
+        
+            </ul>
           </div>
         </div>
 
