Add site responsive

--- a/about.html
+++ b/about.html
@@ -67,7 +67,10 @@
   <!-- About section -->
   <div class="container py-5">
     <div class="row">
-      <div class="col-9">
+      <div class="col-12 col-xl-9 mb-4 mb-xl-0">
+        <!-- mb-4: use a bottom margin size of 4 for all screens (xs and up)
+            mb-lg-0: use a bottom margin size of 0 for large (large) screens and up 
+          -->
         <h3 >My Story</h3>
 
         <p>This is how it all started. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore doloribus,
@@ -113,7 +116,7 @@
             aut laboriosam.
           <p>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-lg-3">
         <img src="/images/pexels-suedadilli-29498888.jpg" class="img-fluid" alt="...">
         <h3 class="mt-4 py-1">Inspiration</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam veritatis perferendis, inventore voluptatum
@@ -135,12 +138,7 @@
 
   <footer
     class="d-flex flex-wrap justify-content-between align-items-center p-4 mt-4  bg-secondary text-white bg-opacity-75">
-    <!-- <div class="col-md-4 d-flex align-items-center">
-          <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-          </a>
-          <span class="mb-3 mb-md-0 text-body-secondary">© 2024 Company, Inc</span>
-        </div> -->
+     
     <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 Made with &hearts;, in Hamburg</span>
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
       <li class="ms-3"><a class="text-body-secondary" href="#">
