--- a/berlin.html
+++ b/berlin.html
@@ -111,7 +111,7 @@
 
   <div class="container py-5">
     <div class="row">
-      <div class="col-9">
+      <div class="col-12 col-lg-8 mb-4 mb-lg-0">
         <h3>Explore Berlin - with me</h3>
 
         <p>This is how it all started. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore doloribus,
@@ -138,10 +138,10 @@
 
 
       </div>
-      <div class="col-3">
+      <div class="col-12 col-lg-4">
 
 
-        <div class="card" id="info">
+        <div class="card m-auto" id="info">
           <div class="card-header">
             Weather Update
           </div>
