--- a/lahore.html
+++ b/lahore.html
@@ -110,8 +110,8 @@
   <!--Image Slider Ending -->
 
   <div class="container py-5">
-    <div class="row">
-      <div class="col-9">
+    <div class="row justify-content-evenly">
+      <div class="col-12 col-lg-8 mb-4 mb-lg-0">
         <h3> Lahore - A Historaical City in Subcontinent </h3>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nemo mollitia necessitatibus autem laborum! Ipsum quis eaque molestias beatae fuga, obcaecati, error aut animi blanditiis nostrum ad earum quos doloribus.
@@ -136,10 +136,10 @@
 
 
       </div>
-      <div class="col-3">
+      <div class="col-12 col-lg-4">
 
 
-        <div class="card" id="info">
+        <div class="card m-auto" id="info">
           <div class="card-header">
             Weather Update
           </div>
