--- a/suggestion.html
+++ b/suggestion.html
@@ -101,7 +101,7 @@
       </div>
       
 
-      <dialog class="dlg p-5 text-center">
+      <dialog class="col-6 m-auto p-5 text-center">
         <h5 id="uMessage" class="my-5 py-4"></h5>
         <button autofocus class="btn btn-secondary">Close</button>
     </dialog>
@@ -114,12 +114,7 @@
 
   <footer
     class="d-flex flex-wrap justify-content-between align-items-center p-4 mt-4  bg-secondary text-white bg-opacity-75">
-    <!-- <div class="col-md-4 d-flex align-items-center">
-          <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-          </a>
-          <span class="mb-3 mb-md-0 text-body-secondary">© 2024 Company, Inc</span>
-        </div> -->
+     
     <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 Made with &hearts;, in Hamburg</span>
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
       <li class="ms-3"><a class="text-body-secondary" href="#">
