Add section to pages

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   </header>
   <!-- Navbar Ending -->
-
+<section>
   <!-- Background image -->
   <div id="" class="hero d-flex align-items-center justify-content-center height-adjustment">
     <div class="bg-secondary p-4 bg-opacity-75 rounded">
@@ -145,7 +145,7 @@
   <section class="container my-5">
     <div id="map"></div>
   </section>
-
+</section>
   <footer
     class="d-flex flex-wrap justify-content-between align-items-center p-4 mt-4  bg-secondary text-white bg-opacity-75">
      
