--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 
   </header>
   <!-- Navbar Ending -->
-
+<section>
   <!-- About section -->
   <div class="container py-5">
     <div class="row">
@@ -116,7 +116,7 @@
             aut laboriosam.
           <p>
       </div>
-      <div class="col-12 col-lg-3">
+      <div class="col-12 col-xl-3">
         <img src="/images/pexels-suedadilli-29498888.jpg" class="img-fluid" alt="...">
         <h3 class="mt-4 py-1">Inspiration</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam veritatis perferendis, inventore voluptatum
@@ -135,7 +135,7 @@
     </div>
   </div>
   <!-- About section Ending -->
-
+</section>
   <footer
     class="d-flex flex-wrap justify-content-between align-items-center p-4 mt-4  bg-secondary text-white bg-opacity-75">
      
