--- a/lahore.html
+++ b/lahore.html
@@ -64,7 +64,7 @@
   </header>
   <!-- Navbar Ending -->
 
-
+<section>
   <!-- Image Slider -->
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -161,7 +161,7 @@
     </div>
 
   </div>
-
+</section>
 
   <footer
     class="d-flex flex-wrap justify-content-between align-items-center p-4 mt-4  bg-secondary text-white bg-opacity-75">
