--- a/suggestion.html
+++ b/suggestion.html
@@ -62,8 +62,8 @@
 
   </header>
   <!-- Navbar Ending -->
-
-  <!-- About section -->
+<section>
+  <!-- Suggestion section -->
   <div class="container py-5">
     <div class="row">
       <div class="col">
@@ -111,7 +111,7 @@
     </div>
   </div>
   <!-- About section Ending -->
-
+</section>
   <footer
     class="d-flex flex-wrap justify-content-between align-items-center p-4 mt-4  bg-secondary text-white bg-opacity-75">
      
